# pokemon-dagster-dlt

./: .gitignore  README.md  pyproject.toml
dagster_dlt/: definitions.py
dagster_dlt/defs/assets/dlt/: 1_poke_rest_api.py  ex_one_poke_rest_api.py
files/: .gitkeep
pokemon_dagster_dlt/: definitions.py
pokemon_dagster_dlt/defs/assets/dlt/: 1_poke_rest_api.py  2_poke_rest_api.py  3_poke_rest_api.py  README.md
pokemon_dagster_dlt/defs/resources/: __init__.py
src/: definitions.py
src/defs/assets/dlt/: 1_poke_rest_api.py  2_poke_rest_api.py  3_poke_rest_api.py
src/defs/utils/: __init__.py
