[project]
name = "pokemon_dagster_dlt"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster-components==0.26.8",
    "dagster-dlt==0.26.8",
    "dlt[duckdb]==1.10.0",
]

[project.entry-points]
"dagster_dg.plugin" = { dagster_dlt = "src.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "src"

[tool.setuptools.packages.find]
exclude=["tests"]


